# tasker

./: .gitignore  .temp_task1_updates.txt  .temp_task2_updates.txt  .temp_task3_updates.txt  CMakeLists.txt  Makefile  README.md  hello_world  nob  nob.c  test  test.c
include/: System2.h  command_context.h  cross_pipe.h  file_ops.h  global_sockets.h  intrupt_cleanup.h  platform.h  protocol.h  server_logic.h  shared_file.h  task.h  tasks.h  terminal.h  utils.h
src/: file_ops.c  global_sockets.c  hello_world.c  intrupt_cleanup.c  maker.c  worker.c
